feat: launch app from launcher